src/objects/ToDelete20Feb2__c/ToDelete20Feb2__c.object-meta.xml
<CustomObject>
    <label>ToDelete20Feb2</label>
    <nameField>
        <label>ToDelete20Feb2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ToDelete20Feb2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>