src/objects/ToDelete20Feb2__c/fields/delete__c.field-meta.xml
<CustomField>
    <fullName>delete__c</fullName>
    <label>delete</label>
    <length>23</length>
    <type>Text</type>
</CustomField>