src/objects/ToDelete20Feb2__c/fields/detailsFeb2__c.field-meta.xml
<CustomField>
    <fullName>detailsFeb2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>detailsFeb2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ToDelete20Feb2s</relationshipLabel>
    <relationshipName>ToDelete20Feb2s</relationshipName>
    <type>Lookup</type>
</CustomField>