src/objects/ToDelete20Feb2__c/fields/keep__c.field-meta.xml
<CustomField>
    <fullName>keep__c</fullName>
    <label>keep</label>
    <length>24</length>
    <type>Text</type>
</CustomField>