src/objects/ToDelete20Feb2__c/fields/LongTextAreaDetails__c.field-meta.xml
<CustomField>
    <fullName>LongTextAreaDetails__c</fullName>
    <label>LongTextAreaDetails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>