src/objects/ToDelete20Feb2__c/fields/NumberDetails__c.field-meta.xml
<CustomField>
    <fullName>NumberDetails__c</fullName>
    <label>NumberDetails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>