src/objects/ToDelete20Feb2__c/fields/RichTextAreaDetails2__c.field-meta.xml
<CustomField>
    <fullName>RichTextAreaDetails2__c</fullName>
    <label>RichTextAreaDetails2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>