src/objects/ToDelete20Feb2__c/fields/TextAreaDetails__c.field-meta.xml
<CustomField>
    <fullName>TextAreaDetails__c</fullName>
    <label>TextAreaDetails</label>
    <type>TextArea</type>
</CustomField>