src/objects/ToDelete20Feb2__c/fields/UserDetailsFeb2_2__c.field-meta.xml
<CustomField>
    <fullName>UserDetailsFeb2_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserDetailsFeb2_2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ToDelete20Feb2s</relationshipName>
    <type>Lookup</type>
</CustomField>